# ProTune

./: .gitignore  CMakeLists.txt  Ny optagelse 73.m4a  ProTune.jucer  README.md  build_protune.sh
.claude/: ralph-loop.local.md
Source/: PitchCorrectionEngine.cpp  PitchCorrectionEngine.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PsolaShifter.cpp  PsolaShifter.h  RetuneEngine.cpp  RetuneEngine.h  ScaleMapper.cpp  ScaleMapper.h
Tools/: AudioFileTest.cpp  EngineSmokeTest.cpp  SineTest.cpp  VST3Probe.cpp
docs/: ARCHITECTURE.md  AUTOTUNE_GUIDE.md  NEXT_STEPS.md  spectral_peak_vocoder.md  us_5973252_pitch_detection_intonation_correction.md
